--- a/.gitconfig
+++ b/.gitconfig
@@ -20,6 +20,8 @@
   undo = reset HEAD~1 --mixed
 	amend = commit -a --amend
 	wipe = !git add -A && git commit -qm 'WIPE SAVEPOINT' && git reset HEAD~1 --hard
+  cl = clone
+	br = branch
 
 [push]
 	default = current
